# bear_python_demo

./: .env  .gitignore  MANIFEST.in  README.md  activate_venv.ps1  common_tool_add.ps1  common_tool_pull.ps1  common_tool_push.ps1  config.tmpl.toml  create_archive.cmd  donwload_dep.ps1  install.cmd  install_for_dev.ps1  install_venv.cmd  install_venv.ps1  package.cmd  package.ps1  publish.sh  pull_common_tool.ps1  push_common_tool.ps1  pyproject.toml  release.cmd  release.ps1  start.cmd  tmpl-config.toml  update_dependency.ps1  update_from_archive.cmd
bear_demo/: main.py
bear_python_demo/: entry.py  main.py
bear_python_demo/common_tool/: abstract_config.py  check_update.py  config_mgr.py  entry_decorator.py
bear_python_demo/controller/: main.py
bear_python_demo/entry/: demo.py  main.py
bear_python_demo/helper/: arg_mgr.py  config.py  config_mgr.py  entry_decorator.py  env_mgr.py
bear_python_demo/util/: check_update.py  config_mgr.py  console_mgr.py  entry_decorator.py  log_mgr.py
common_tool/: abstract_arg_mgr.py  abstract_config.py  abstract_config_mgr.py  abstract_controller.py  abstract_entry.py  abstract_env_mgr.py  check_update.py  entry_decorator.py  log_mgr.py  util.py
dependency/: bear_components-0.1.dev4+ga6efba6.d20231012105400-py3-none-any.whl
installer_template/: config.toml  create_updater_for_data.cmd  create_updater_for_program.cmd  install.cmd  start.cmd
installer_template/helper/script/: create_updater.py  install.py
program/common_tool/: abstract_entry.py  abstract_option_mgr.py  log_mgr.py  util.py
program/dev_tool/: create_archive.py  donwload_dep.py  install.py  install_deps.py  install_venv.py  publish.py  update_from_archive.py
program/main/: entry.py
program/main/controller/: main.py
program/main/helper/: option_mgr.py
tool/: donwload_dep.cmd  install_deps.cmd  install_for_dev.cmd  install_venv.cmd  package.cmd  publish.cmd  release.cmd
tool/helper/: donwload_dep.py  install_venv.py  package.py  publish.py  release.py
