[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "bear_python_demo/_version.py"

[tool.setuptools.packages.find]
include = ["bear_python_demo"] 

[project]
name = "bear_python_demo"
dynamic = ['version']
authors = [
  { name="Chen Bear", email="chenll7@outlook.com" },
]
description = "Bear python demo."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "colorama"
]

[project.scripts]
bear_python_demo = "bear_python_demo.main:main"