[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "program/_version.py"
local_scheme = "node-and-timestamp"

[tool.setuptools.packages.find]
include = ["program"]
exclude = ["*/__pycache__/*"]

[project]
name = "bear_python_demo"
version = "1.0.0"
authors = [
  { name="Chen Bear", email="chenll7@outlook.com" },
]
description = "Bear python demo."
readme = "README.md"
requires-python = "==3.11.*"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  'packaging >= 23.2',
  'colorama >= 0.4.6'
]